--- a/src/app/Pages/login-page/login-page.component.html
+++ b/src/app/Pages/login-page/login-page.component.html
@@ -1,2 +1,8 @@
-<p>login-page works!</p>
-<button (click)="testi()"></button>
+<p>Here you can</p>
+<p>Compose a corporative Login page</p>
+<p>with promotions</p>
+<br>
+<app-login-smart></app-login-smart>
+<br>
+<p>And have a recover Password</p>
+<p>Do some analytics different from popUp login</p>
