--- a/src/app/ReusableViewComponents/transaction-view/transaction-view.component.html
+++ b/src/app/ReusableViewComponents/transaction-view/transaction-view.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="transaction-view">
   <mat-card-header>
     <mat-card-title>{{transaction.description ? transaction.description:'Unknown' }}</mat-card-title>
     <mat-card-subtitle>{{transaction.date ? transaction.date.toUTCString():'Unknown' }}</mat-card-subtitle>
